#add: reusable classes css

--- a/css/styles.css
+++ b/css/styles.css
@@ -85,4 +85,23 @@ img {
   height: auto;
 }
 
+.section {
+  padding: 2rem 0 4rem;
+}
+
+.secion__title {
+  font-size: var(--h1-font-size);
+}
+
+.section__subtitle {
+  display: block;
+  font-size: var(--small-font-size);
+  margin-bottom: var(--mb-3);
+}
+
+.section__subtitle,
+.secion__title {
+  text-align: center;
+}
+
 /*# sourceMappingURL=styles.css.map */
