--- a/sass/bases/_base.scss
+++ b/sass/bases/_base.scss
@@ -37,3 +37,23 @@ img {
     max-width: 100%;
     height: auto;
 }
+
+// reusable classes
+.section {
+    padding: 2rem 0 4rem;
+}
+
+.secion__title {
+    font-size: var(--h1-font-size);
+}
+
+.section__subtitle {
+    display: block;
+    font-size: var(--small-font-size);
+    margin-bottom: var(--mb-3);
+}
+
+.section__subtitle,
+.secion__title {
+    text-align: center;
+}
