#add: header css

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,8 @@
 @import "./abstracts/variables";
+@import "./abstracts/mixins";
 
 @import "./bases/base";
+
+@import "./layout/header";
+@import "./layout/layout";
+@import "./layout/navigation";
