--- a/css/styles.css
+++ b/css/styles.css
@@ -104,6 +104,35 @@ img {
   text-align: center;
 }
 
+.button {
+  display: inline-block;
+  background-color: var(--first-color);
+  color: #fff;
+  padding: 1rem;
+  border-radius: 0.5rem;
+  -webkit-border-radius: 0.5rem;
+  -moz-border-radius: 0.5rem;
+  -ms-border-radius: 0.5rem;
+  -o-border-radius: 0.5rem;
+  font-weight: var(--font-medium);
+}
+.button:hover {
+  background-color: var(--first-color-alt);
+}
+.button__icon {
+  font-size: 1.25rem;
+  margin-left: var(--mb-0-5);
+  transition: 0.3s;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+  -ms-transition: 0.3s;
+  -o-transition: 0.3s;
+}
+.button--flex {
+  display: inline-flex;
+  align-items: center;
+}
+
 .header {
   width: 100%;
   position: fixed;
@@ -238,6 +267,9 @@ img {
 }
 .home__description {
   margin-bottom: var(--mb-1-5);
+}
+.home__scroll {
+  display: none;
 }
 .home__scroll-button {
   color: var(--first-color);
