--- a/sass/layout/_home.scss
+++ b/sass/layout/_home.scss
@@ -53,6 +53,7 @@
     }
 
     &__scroll {
+        display: none;
         &-button {
             color: var(--first-color);
             transition: 0.3s;
