--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,6 +3,7 @@
 
 @import "./bases/base";
 
+@import "./components/button";
 @import "./layout/header";
 @import "./layout/layout";
 @import "./layout/navigation";
