--- a/css/styles.css
+++ b/css/styles.css
@@ -100,7 +100,7 @@ img {
 }
 
 .section__subtitle,
-.secion__title {
+.section__title {
   text-align: center;
 }
 
@@ -297,6 +297,42 @@ img {
 }
 .home__scroll-arrow {
   font-size: 1.25rem;
+}
+
+.about__img {
+  width: 200px;
+  border-radius: 0.5rem;
+  -webkit-border-radius: 0.5rem;
+  -moz-border-radius: 0.5rem;
+  -ms-border-radius: 0.5rem;
+  -o-border-radius: 0.5rem;
+  justify-self: center;
+  align-self: center;
+}
+.about__description {
+  text-align: center;
+  margin-bottom: var(--mb-2);
+}
+.about__info {
+  display: flex;
+  justify-content: space-evenly;
+  margin-bottom: var(--mb-2);
+}
+.about__info .about__info-name, .about__info .about__info-title {
+  display: block;
+  text-align: center;
+}
+.about__info-title {
+  font-size: var(--h2-font-size);
+  font-weight: var(--font-semi-bold);
+  color: var(--title-color);
+}
+.about__info-name {
+  font-size: var(--smaller-font-size);
+}
+.about__buttons {
+  display: flex;
+  justify-content: center;
 }
 
 /*# sourceMappingURL=styles.css.map */
