--- a/sass/layout/_services.scss
+++ b/sass/layout/_services.scss
@@ -1,3 +1,118 @@
-.services{
-    
+.services {
+    &__container {
+        gap: 1.5rem;
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    &__content {
+        position: relative;
+        background-color: var(--container-color);
+        padding: 2rem 0.5rem 1.25rem 1.5rem;
+        border-radius: 0.25rem;
+        -webkit-border-radius: 0.25rem;
+        -moz-border-radius: 0.25rem;
+        -ms-border-radius: 0.25rem;
+        -o-border-radius: 0.25rem;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15);
+        transition: 0.3s;
+        -webkit-transition: 0.3s;
+        -moz-transition: 0.3s;
+        -ms-transition: 0.3s;
+        -o-transition: 0.3s;
+
+        &:hover {
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
+        }
+    }
+
+    &__icon {
+        display: block;
+        font-size: 1.5rem;
+        color: var(--first-color);
+        margin-bottom: var(--mb-1);
+    }
+
+    &__title {
+        font-size: var(--h3-font-size);
+        margin-bottom: var(--mb-1);
+        font-weight: var(--font-medium);
+    }
+
+    &__button {
+        cursor: pointer;
+        font-size: var(--small-font-size);
+
+        &:hover .button__icon {
+            transform: translateX(0.25rem);
+            -webkit-transform: translateX(0.25rem);
+            -moz-transform: translateX(0.25rem);
+            -ms-transform: translateX(0.25rem);
+            -o-transform: translateX(0.25rem);
+        }
+    }
+
+    &__modal {
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: rgba(0, 0, 0, 0.5);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 0 1rem;
+        z-index: var(--z-modal);
+        opacity: 0;
+        visibility: hidden;
+        transition: 0.3s;
+        -webkit-transition: 0.3s;
+        -moz-transition: 0.3s;
+        -ms-transition: 0.3s;
+        -o-transition: 0.3s;
+
+        &-content {
+            position: relative;
+            background-color: var(--container-color);
+            padding: 1.5rem;
+            border-radius: 0.5rem;
+            -webkit-border-radius: 0.5rem;
+            -moz-border-radius: 0.5rem;
+            -ms-border-radius: 0.5rem;
+            -o-border-radius: 0.5rem;
+        }
+
+        &-services {
+            row-gap: 1rem;
+        }
+
+        &-service {
+            display: flex;
+        }
+
+        &-title {
+            font-size: var(--h3-font-size);
+            font-weight: var(--font-medium);
+            margin-bottom: var(--mb-1-5);
+        }
+
+        &-close {
+            position: absolute;
+            top: 1rem;
+            right: 1rem;
+            font-size: 1.5rem;
+            color: var(--first-color);
+            cursor: pointer;
+        }
+
+        &-icon {
+            color: var(--first-color);
+            margin-right: var(--mb-0-25);
+        }
+    }
+}
+
+.active-modal {
+    opacity: 1;
+    visibility: visible;
 }
