--- a/css/styles.css
+++ b/css/styles.css
@@ -728,4 +728,36 @@ img {
   justify-self: center;
 }
 
+.testimonial__header, .testimonial__data {
+  display: flex;
+}
+.testimonial__data {
+  justify-content: space-between;
+  margin-bottom: var(--mb-1);
+}
+.testimonial__img {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  margin-right: var(--mb-0-75);
+}
+.testimonial__name {
+  font-size: var(--h3-font-size);
+  font-weight: var(--font-medium);
+}
+.testimonial__client {
+  font-size: var(--small-font-size);
+  color: var(--text-color-light);
+}
+.testimonial__description {
+  margin-bottom: var(--mb-2-5);
+}
+.testimonial__icon-star {
+  color: var(--first-color);
+}
+
 /*# sourceMappingURL=styles.css.map */
