#add: testimonial swiper js

--- a/css/styles.css
+++ b/css/styles.css
@@ -760,4 +760,8 @@ img {
   color: var(--first-color);
 }
 
+.swiper-container .swiper-pagination-testimonial {
+  bottom: 0;
+}
+
 /*# sourceMappingURL=styles.css.map */
