#add: contact css

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,6 +4,7 @@
 @import "./bases/base";
 
 @import "./components/button";
+
 @import "./layout/header";
 @import "./layout/layout";
 @import "./layout/navigation";
@@ -15,3 +16,4 @@
 @import "./layout/portfolio";
 @import "./layout/project";
 @import "./layout/testimonial";
+@import "./layout/contact";
