--- a/css/styles.css
+++ b/css/styles.css
@@ -705,7 +705,7 @@ img {
   outline: none;
 }
 
-.project__description, .project__title {
+.footer__copy, .footer__social, .footer__link, .footer__subtitle, .footer__title, .project__description, .project__title {
   color: #fff;
 }
 
@@ -806,6 +806,46 @@ img {
   font-family: var(--body-font);
   font-size: var(--normal-font-size);
   padding: 0.25rem 0.5rem 0.5rem 0;
+}
+
+.footer__social:hover, .footer__link:hover {
+  color: var(--first-color-lighter);
+}
+
+.footer__copy, .footer__social, .footer__link, .footer__subtitle, .footer__title, .project__title, .project__description {
+  color: #fff;
+}
+
+.footer {
+  padding-top: 2rem;
+}
+.footer__bg {
+  background-color: var(--first-color-second);
+  padding: 2rem 0 3rem;
+}
+.footer__container {
+  row-gap: 3.5rem;
+}
+.footer__title {
+  font-size: var(--h1-font-size);
+  margin-bottom: var(--mb-0-25);
+}
+.footer__subtitle {
+  font-size: var(--small-font-size);
+}
+.footer__links {
+  display: flex;
+  flex-direction: column;
+  row-gap: 1.5rem;
+}
+.footer__social {
+  font-size: 1.25rem;
+  margin-right: var(--mb-1-5);
+}
+.footer__copy {
+  font-size: var(--small-font-size);
+  text-align: center;
+  margin-top: var(--mb-3);
 }
 
 /*# sourceMappingURL=styles.css.map */
