#add: scroll header

--- a/css/styles.css
+++ b/css/styles.css
@@ -246,6 +246,10 @@ img {
   color: var(--first-color);
 }
 
+.scroll-header {
+  box-shadow: 0 -1px 4px rgba(0, 0, 0, 0.15);
+}
+
 .home__container {
   gap: 1rem;
 }
