--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,6 +4,7 @@
 @import "./bases/base";
 
 @import "./components/button";
+@import "./components/scrollUp";
 
 @import "./layout/header";
 @import "./layout/layout";
