--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,15 @@
   --z-modal: 500;
 }
 
+body.dark-theme {
+  --first-color-second: hsl(var(--hue-color), 30%, 8%);
+  --title-color: hsl(var(--hue-color), 8%, 95%);
+  --text-color: hsl(var(--hue-color), 8%, 75%);
+  --input-color: hsl(var(--hue-color), 29%, 16%);
+  --body-color: hsl(var(--hue-color), 28%, 12%);
+  --container-color: hsl(var(--hue-color), 29%, 16%);
+}
+
 @media only screen and (min-width: 968px) {
   :root {
     --big-font-size: 3rem;
@@ -268,9 +277,12 @@ img {
     -o-transition: 0.3s;
   }
 }
-
 .nav-show {
   bottom: 0;
+}
+.nav__btns {
+  display: flex;
+  align-items: center;
 }
 
 .active-link {
@@ -279,6 +291,16 @@ img {
 
 .scroll-header {
   box-shadow: 0 -1px 4px rgba(0, 0, 0, 0.15);
+}
+
+.change-theme {
+  font-size: 1.25rem;
+  color: var(--title-color);
+  margin-right: var(--mb-1);
+  cursor: pointer;
+}
+.change-theme:hover {
+  color: var(--first-color);
 }
 
 .home__container {
