--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -45,6 +45,18 @@
     --z-modal: 500;
 }
 
+body.dark-theme {
+    // Colors
+
+    --first-color-second: hsl(var(--hue-color), 30%, 8%);
+
+    --title-color: hsl(var(--hue-color), 8%, 95%);
+    --text-color: hsl(var(--hue-color), 8%, 75%);
+
+    --input-color: hsl(var(--hue-color), 29%, 16%);
+    --body-color: hsl(var(--hue-color), 28%, 12%);
+    --container-color: hsl(var(--hue-color), 29%, 16%);
+}
 @media only screen and (min-width: 968px) {
     :root {
         --big-font-size: 3rem;
