--- a/sass/bases/_base.scss
+++ b/sass/bases/_base.scss
@@ -17,6 +17,9 @@ body {
     color: var(--text-color);
 }
 
+main {
+    overflow-x: hidden;
+}
 h1,
 h2,
 h3,
@@ -78,5 +81,28 @@ img {
 
     &:hover {
         background-color: var(--first-color);
+    }
+}
+
+@include responsive(768, 0) {
+    body {
+        margin: 0;
+    }
+
+    main {
+        padding: 1rem;
+    }
+    .section {
+        padding: 6rem 0 2rem;
+    }
+
+    .section__subtitle {
+        margin-bottom: 4rem;
+    }
+}
+
+@include responsive(1024, 0) {
+    main {
+        padding: 0;
     }
 }
