--- a/sass/layout/_contact.scss
+++ b/sass/layout/_contact.scss
@@ -49,4 +49,26 @@
         font-size: var(--normal-font-size);
         padding: 0.25rem 0.5rem 0.5rem 0;
     }
+
+    @include responsive(568, 0) {
+        &__container {
+            grid-template-columns: repeat(2, 1fr);
+        }
+    }
+
+    @include responsive(768, 0) {
+        &__container {
+            grid-template-columns: 1fr 1.5fr;
+        }
+    }
+
+    @include responsive(1024, 0) {
+        &__form {
+            width: 460px;
+        }
+
+        &__inputs {
+            grid-template-columns: repeat(2, 1fr);
+        }
+    }
 }
