--- a/sass/layout/_layout.scss
+++ b/sass/layout/_layout.scss
@@ -2,6 +2,20 @@
     max-width: 768px;
     margin-left: var(--mb-1-5);
     margin-right: var(--mb-1-5);
+
+    @include responsive(350, 1) {
+        margin-left: var(--mb-1);
+        margin-right: var(--mb-1);
+    }
+
+    @include responsive(768, 0) {
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    @include responsive(1199, 0) {
+        max-width: 1024px;
+    }
 }
 
 .grid {
