--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -84,6 +84,32 @@
         display: flex;
         align-items: center;
     }
+
+    @include responsive(350, 1) {
+        &__menu {
+            padding: 2rem 0.25rem 4rem;
+        }
+
+        &__list {
+            column-gap: 0;
+        }
+    }
+
+    @include responsive(768, 0) {
+        height: calc(var(--header-height) + 1.5rem);
+        column-gap: 1rem;
+
+        &__icon,
+        &__close,
+        &__toggle {
+            display: none;
+        }
+
+        &__list {
+            display: flex;
+            column-gap: 2rem;
+        }
+    }
 }
 
 .active-link {
@@ -102,5 +128,9 @@
 
     &:hover {
         color: var(--first-color);
+    }
+
+    @include responsive(768, 0) {
+        margin-right: 0;
     }
 }
