--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -28,7 +28,7 @@
     }
 
     &__button {
-        padding: 0.6rem 0.75rem;
+        padding: 0.3rem 0rem;
     }
     &__button:hover .button__icon {
         transform: translateX(0.25rem);
@@ -36,6 +36,24 @@
         -moz-transform: translateX(0.25rem);
         -ms-transform: translateX(0.25rem);
         -o-transform: translateX(0.25rem);
+    }
+
+    @include responsive(568, 0) {
+        &__content {
+            grid-template-columns: repeat(2, 1fr);
+            align-items: center;
+        }
+    }
+
+    @include responsive(768, 0) {
+        &__img {
+            width: 320px;
+        }
+    }
+    @include responsive(1024, 0) {
+        &__content {
+            column-gap: 1rem;
+        }
     }
 }
 
@@ -47,17 +65,29 @@
 .swiper-arrow-icon {
     font-size: 2rem;
     color: var(--first-color);
+    @include responsive(1024, 0) {
+        font-size: 3.5rem;
+    }
 }
 .swiper-button-next {
     right: -0.75rem;
+    @include responsive(1024, 0) {
+        right: -3.5rem;
+    }
 }
 
 .swiper-button-prev {
     left: -0.75rem;
+    @include responsive(1024, 0) {
+        left: -3.5rem;
+    }
 }
 
 .swiper-container-horizontal > .swiper-pagination-bullets {
     bottom: -2.5rem;
+    @include responsive(1024, 0) {
+        bottom: -4.5rem;
+    }
 }
 
 .swiper-pagination-bullet-active {
@@ -68,4 +98,11 @@
 .swiper-button-next,
 .swiper-pagination-bullet {
     outline: none;
+}
+
+.swiper-pagination-bullet {
+    @include responsive(1024, 0) {
+        width: 0.8rem;
+        height: 0.8rem;
+    }
 }
