--- a/sass/layout/_project.scss
+++ b/sass/layout/_project.scss
@@ -25,4 +25,37 @@
         width: 232px;
         justify-self: center;
     }
+
+    @include responsive(350, 1) {
+        &__img {
+            width: 200px;
+        }
+    }
+
+    @include responsive(568, 0) {
+        &__container {
+            grid-template-columns: repeat(2, 1fr);
+        }
+    }
+
+    @include responsive(768, 0) {
+        text-align: initial;
+        &__bg {
+            background: none;
+        }
+        &__container {
+            background-color: var(--first-color-second);
+            padding: 3rem 2.5rem 0;
+            border-radius: 1rem;
+            -webkit-border-radius: 1rem;
+            -moz-border-radius: 1rem;
+            -ms-border-radius: 1rem;
+            -o-border-radius: 1rem;
+            grid-template-columns: 1fr max-content;
+            column-gap: 3rem;
+        }
+        &__data {
+            padding-top: 0.8rem;
+        }
+    }
 }
