#add: preparation of deployment

--- a/sass/layout/_about.scss
+++ b/sass/layout/_about.scss
@@ -63,4 +63,9 @@
             justify-content: initial;
         }
     }
+    @include responsive(1024, 0) {
+        &__container {
+            column-gap: 0rem;
+        }
+    }
 }
