--- a/css/styles.css
+++ b/css/styles.css
@@ -370,20 +370,23 @@ img {
     padding: 2rem 0.25rem 4rem;
   }
   .nav__list {
-    column-gap: 0;
+    -moz-column-gap: 0;
+         column-gap: 0;
   }
 }
 @media only screen and (min-width: 768px) {
   .nav {
     height: calc(var(--header-height) + 1.5rem);
-    column-gap: 1rem;
+    -moz-column-gap: 1rem;
+         column-gap: 1rem;
   }
   .nav__icon, .nav__close, .nav__toggle {
     display: none;
   }
   .nav__list {
     display: flex;
-    column-gap: 2rem;
+    -moz-column-gap: 2rem;
+         column-gap: 2rem;
   }
 }
 
@@ -420,6 +423,7 @@ img {
 }
 .home__social {
   display: grid;
+  grid-template-columns: -webkit-max-content;
   grid-template-columns: max-content;
   row-gap: 1rem;
 }
@@ -492,6 +496,7 @@ img {
 }
 @media only screen and (min-width: 568px) {
   .home__content {
+    grid-template-columns: -webkit-max-content 1fr 1fr;
     grid-template-columns: max-content 1fr 1fr;
   }
   .home__data {
@@ -507,7 +512,8 @@ img {
     row-gap: 2rem;
   }
   .home__content {
-    column-gap: 3rem;
+    -moz-column-gap: 3rem;
+         column-gap: 3rem;
   }
   .home__blob {
     width: 270px;
@@ -570,7 +576,8 @@ img {
 @media only screen and (min-width: 768px) {
   .about__container {
     grid-template-columns: repeat(2, 1fr);
-    column-gap: 3rem;
+    -moz-column-gap: 3rem;
+         column-gap: 3rem;
   }
   .about__img {
     width: 350px;
@@ -583,6 +590,12 @@ img {
   }
   .about__buttons {
     justify-content: initial;
+  }
+}
+@media only screen and (min-width: 1024px) {
+  .about__container {
+    -moz-column-gap: 0rem;
+         column-gap: 0rem;
   }
 }
 
@@ -732,8 +745,10 @@ img {
 }
 .qualification__data {
   display: grid;
+  grid-template-columns: 1fr -webkit-max-content 1fr;
   grid-template-columns: 1fr max-content 1fr;
-  column-gap: 1.5rem;
+  -moz-column-gap: 1.5rem;
+       column-gap: 1.5rem;
 }
 .qualification__title {
   font-size: var(--normal-font-size);
@@ -903,6 +918,7 @@ img {
 }
 @media only screen and (max-width: 350px) {
   .services__container {
+    grid-template-columns: -webkit-max-content;
     grid-template-columns: max-content;
     justify-content: center;
   }
@@ -984,7 +1000,8 @@ img {
 }
 @media only screen and (min-width: 1024px) {
   .portfolio__content {
-    column-gap: 1rem;
+    -moz-column-gap: 1rem;
+         column-gap: 1rem;
   }
 }
 
@@ -1094,8 +1111,10 @@ img {
     -moz-border-radius: 1rem;
     -ms-border-radius: 1rem;
     -o-border-radius: 1rem;
+    grid-template-columns: 1fr -webkit-max-content;
     grid-template-columns: 1fr max-content;
-    column-gap: 3rem;
+    -moz-column-gap: 3rem;
+         column-gap: 3rem;
   }
   .project__data {
     padding-top: 0.8rem;
@@ -1264,7 +1283,8 @@ img {
   }
   .footer__links {
     flex-direction: row;
-    column-gap: 2rem;
+    -moz-column-gap: 2rem;
+         column-gap: 2rem;
   }
   .footer__socials {
     justify-self: flex-end;
@@ -1281,5 +1301,3 @@ img {
     padding: 0;
   }
 }
-
-/*# sourceMappingURL=styles.css.map */
